collapse fix

--- a/src/components/SectionTitle.css
+++ b/src/components/SectionTitle.css
@@ -1,6 +1,5 @@
 .section-title {
     color: #eeeeee;
     font-size: 1.4em;
-    margin-right: 25px;
     float: left;
 }
